# artifacts/api-server/src/routes/marketing/index.ts
@@ -1,0 +1,14 @@
+import { Router } from "express";
+import gmbRouter from "./gmb";
+import reviewRouter from "./review";
+import socialRouter from "./social";
+import regenerateRouter from "./regenerate";
+
+const router = Router();
+
+router.use("/marketing", gmbRouter);
+router.use("/marketing", reviewRouter);
+router.use("/marketing", socialRouter);
+router.use("/marketing", regenerateRouter);
+
+export default router;
